from app import db
from datetime import datetime, date, time
from sqlalchemy import JSON

# Import PCA overlay models
try:
    from models_pca import TransactionEffective, UserCorrection, UserRule, InferenceSnapshot
except ImportError:
    # PCA models not available yet
    pass

class Expense(db.Model):
    """Detailed expense log table"""
    __tablename__ = 'expenses'
    
    id = db.Column(db.Integer, primary_key=True)
    user_id = db.Column(db.String(255), nullable=False)  # Legacy: kept for backwards compatibility
    user_id_hash = db.Column(db.String(255), nullable=False, index=True)  # SHA-256 hashed user identifier (PRIMARY)
    description = db.Column(db.Text, default='')  # Original expense message
    amount = db.Column(db.Numeric(10, 2), nullable=False)  # Expense amount
    category = db.Column(db.String(50), nullable=False)  # AI-categorized expense type
    currency = db.Column(db.String(10), default='৳')  # Currency symbol
    date = db.Column(db.Date, nullable=False, default=date.today)  # Expense date
    time = db.Column(db.Time, nullable=False, default=lambda: datetime.now().time())  # Expense time
    month = db.Column(db.String(7), nullable=False)  # Format: YYYY-MM
    unique_id = db.Column(db.Text, nullable=False)  # Unique identifier per expense
    created_at = db.Column(db.DateTime, default=datetime.utcnow)  # Database insertion timestamp
    platform = db.Column(db.String(20), default='messenger')  # Facebook Messenger
    original_message = db.Column(db.Text, default='')  # Full original message
    ai_insights = db.Column(db.Text, default='')  # Future AI insights storage
    mid = db.Column(db.String(255), nullable=True)  # Facebook message ID for idempotency
    
    # Expense correction tracking (backwards-compatible)
    superseded_by = db.Column(db.BigInteger, nullable=True)  # ID of expense that supersedes this one
    corrected_at = db.Column(db.DateTime(timezone=True), nullable=True)  # When this expense was corrected
    corrected_reason = db.Column(db.Text, nullable=True)  # Short reason for correction
    
    # Natural Language Processing metadata
    nl_confidence = db.Column(db.Float, nullable=True)  # AI confidence score (0.0-1.0)
    nl_language = db.Column(db.String(20), nullable=True)  # 'bangla', 'english', 'mixed'
    needed_clarification = db.Column(db.Boolean, default=False)  # Whether this expense needed clarification
    
    def __repr__(self):
        return f'<Expense {self.id}: {self.description} - {self.amount}>'

class ExpenseEdit(db.Model):
    """Audit trail for expense corrections and edits"""
    __tablename__ = 'expense_edits'
    
    id = db.Column(db.Integer, primary_key=True)
    expense_id = db.Column(db.Integer, db.ForeignKey('expenses.id'), nullable=False)
    editor_user_id = db.Column(db.String(255), nullable=False)  # User who made the edit
    edited_at = db.Column(db.DateTime, default=datetime.utcnow, nullable=False)
    
    # Before state
    old_amount = db.Column(db.Numeric(10, 2), nullable=True)
    old_category = db.Column(db.String(50), nullable=True)
    old_memo = db.Column(db.Text, nullable=True)
    
    # After state  
    new_amount = db.Column(db.Numeric(10, 2), nullable=True)
    new_category = db.Column(db.String(50), nullable=True)
    new_memo = db.Column(db.Text, nullable=True)
    
    # Edit metadata
    reason = db.Column(db.Text, nullable=True)
    edit_type = db.Column(db.String(20), nullable=False)  # 'amount', 'category', 'description', 'full_edit'
    checksum_before = db.Column(db.String(64), nullable=True)  # Hash of record state before edit
    checksum_after = db.Column(db.String(64), nullable=True)  # Hash of record state after edit
    
    # Session info for idempotency
    audit_session_id = db.Column(db.String(36), nullable=True)  # UUID for grouping related edits
    client_info = db.Column(JSON, default=dict)  # Browser, IP (hashed), timestamp
    confidence_score = db.Column(db.Float, nullable=True)  # AI confidence when edit was made
    source = db.Column(db.String(20), default='manual_form')  # 'manual_form', 'nl_correction', 'bulk_import'
    
    def __repr__(self):
        return f'<ExpenseEdit {self.id}: Expense {self.expense_id} edited by {self.editor_user_id[:8]}...>'

class User(db.Model):
    """User tracking table"""
    __tablename__ = 'users'
    
    id = db.Column(db.Integer, primary_key=True)
    user_id_hash = db.Column(db.String(255), unique=True, nullable=False)  # SHA-256 hashed user ID
    platform = db.Column(db.String(20), nullable=False)  # Facebook Messenger
    total_expenses = db.Column(db.Numeric(12, 2), default=0)  # Lifetime total expenses
    expense_count = db.Column(db.Integer, default=0)  # Total number of expenses
    created_at = db.Column(db.DateTime, default=datetime.utcnow)  # User first interaction
    last_interaction = db.Column(db.DateTime, default=datetime.utcnow)  # Last message timestamp
    last_user_message_at = db.Column(db.DateTime, default=datetime.utcnow)  # 24-hour policy window
    daily_message_count = db.Column(db.Integer, default=0)  # Messages today
    hourly_message_count = db.Column(db.Integer, default=0)  # Messages this hour
    last_daily_reset = db.Column(db.Date, default=date.today)  # Last daily counter reset
    last_hourly_reset = db.Column(db.DateTime, default=datetime.utcnow)  # Last hourly counter reset
    
    # Engagement and onboarding fields
    is_new = db.Column(db.Boolean, default=True)  # New user flag
    has_completed_onboarding = db.Column(db.Boolean, default=False)  # Onboarding completion
    onboarding_step = db.Column(db.Integer, default=0)  # Current onboarding step
    interaction_count = db.Column(db.Integer, default=0)  # Total interactions for habit formation
    first_name = db.Column(db.String(100), default='')  # User's first name for personalization
    
    # User preferences from onboarding (AI-adaptive)
    income_range = db.Column(db.String(50), default='')  # Income bracket
    spending_categories = db.Column(JSON, default=list)  # Array of spending categories
    primary_category = db.Column(db.String(50), default='')  # Main spending category
    focus_area = db.Column(db.String(50), default='')  # saving/budgeting/investment
    additional_info = db.Column(JSON, default=dict)  # Flexible AI-extracted data
    preferences = db.Column(JSON, default=dict)  # Additional user preferences
    
    # Smart reminder system (23-hour compliance)
    reminder_scheduled_for = db.Column(db.DateTime, nullable=True)  # Next reminder time
    reminder_preference = db.Column(db.String(20), default='none')  # 'none', 'daily', 'weekly'
    last_reminder_sent = db.Column(db.DateTime, nullable=True)  # Last reminder timestamp
    
    # Privacy and legal compliance
    privacy_consent_given = db.Column(db.Boolean, default=False)  # Privacy policy consent
    privacy_consent_at = db.Column(db.DateTime, nullable=True)  # When privacy consent was given
    terms_accepted = db.Column(db.Boolean, default=False)  # Terms of service acceptance
    terms_accepted_at = db.Column(db.DateTime, nullable=True)  # When ToS was accepted
    
    # Growth Metrics - Block 4 Analytics (Silent Data Collection)
    signup_source = db.Column(db.String(20), default='other')  # fb-ad|organic|referral|other
    d1_logged = db.Column(db.Boolean, default=False)  # First expense within 24h of signup
    d3_completed = db.Column(db.Boolean, default=False)  # 3+ expenses within 72h of signup
    reports_requested = db.Column(db.Integer, default=0)  # Count of REPORT generations
    
    # Growth Metrics - Milestone Tracking (User-Visible Nudges)
    last_milestone_date = db.Column(db.Date, nullable=True)  # Last day milestone was fired (daily cap)
    consecutive_days = db.Column(db.Integer, default=0)  # Current streak of consecutive days with logs
    last_log_date = db.Column(db.Date, nullable=True)  # Last day user logged expense (for streak calc)
    
    # Block 6 - 3-Day Challenge Tracking
    challenge_active = db.Column(db.Boolean, default=False)  # Active challenge state
    challenge_start_date = db.Column(db.Date, nullable=True)  # Challenge start date
    challenge_end_date = db.Column(db.Date, nullable=True)  # Challenge end date (start + 2 days)
    challenge_completed = db.Column(db.Boolean, default=False)  # Successfully completed challenge
    challenge_report_sent = db.Column(db.Boolean, default=False)  # Auto-report completion flag
    
    def to_dict(self):
        """Convert user to dictionary for AI processing"""
        return {
            'id': self.id,
            'user_id_hash': self.user_id_hash,
            'first_name': self.first_name,
            'is_new': self.is_new,
            'onboarding_step': self.onboarding_step,
            'has_completed_onboarding': self.has_completed_onboarding,
            'income_range': self.income_range,
            'spending_categories': self.spending_categories or [],
            'primary_category': self.primary_category,
            'focus_area': self.focus_area,
            'additional_info': self.additional_info or {},
            'preferences': self.preferences or {},
            'interaction_count': self.interaction_count,
            'last_interaction': self.last_interaction,
            'platform': self.platform
        }
    
    def update_from_dict(self, data: dict):
        """Update user from dictionary (AI-friendly)"""
        for key, value in data.items():
            if hasattr(self, key) and value is not None:
                setattr(self, key, value)
    
    def __repr__(self):
        return f'<User {self.user_id_hash}: {self.platform}>'

class MonthlySummary(db.Model):
    """Monthly analytics table"""
    __tablename__ = 'monthly_summaries'
    
    id = db.Column(db.Integer, primary_key=True)
    user_id_hash = db.Column(db.String(255), nullable=False)  # SHA-256 hashed user ID
    month = db.Column(db.String(7), nullable=False)  # Format: YYYY-MM
    total_amount = db.Column(db.Numeric(12, 2), nullable=False, default=0)  # Monthly total
    expense_count = db.Column(db.Integer, nullable=False, default=0)  # Monthly expense count
    categories = db.Column(JSON, default=dict)  # Category breakdown
    ai_insights = db.Column(db.Text, default='')  # Monthly insights
    created_at = db.Column(db.DateTime, default=datetime.utcnow)  # Summary creation
    updated_at = db.Column(db.DateTime, default=datetime.utcnow, onupdate=datetime.utcnow)  # Last update
    
    def __repr__(self):
        return f'<MonthlySummary {self.user_id_hash}: {self.month} - {self.total_amount}>'

class RateLimit(db.Model):
    """Rate limiting tracking table"""
    __tablename__ = 'rate_limits'
    
    id = db.Column(db.Integer, primary_key=True)
    user_id_hash = db.Column(db.String(255), nullable=False)
    platform = db.Column(db.String(20), nullable=False)
    daily_count = db.Column(db.Integer, default=0)
    hourly_count = db.Column(db.Integer, default=0)
    last_daily_reset = db.Column(db.Date, default=date.today)
    last_hourly_reset = db.Column(db.DateTime, default=datetime.utcnow)
    created_at = db.Column(db.DateTime, default=datetime.utcnow)
    updated_at = db.Column(db.DateTime, default=datetime.utcnow, onupdate=datetime.utcnow)
    
    def __repr__(self):
        return f'<RateLimit {self.user_id_hash}: {self.platform}>'

class UserMilestone(db.Model):
    """User milestone achievement tracking"""
    __tablename__ = 'user_milestones'
    
    id = db.Column(db.Integer, primary_key=True)
    user_id_hash = db.Column(db.String(255), nullable=False, index=True)  # SHA-256 hashed user ID
    milestone_type = db.Column(db.String(20), nullable=False)  # 'streak-3' or '10-logs'
    fired_at = db.Column(db.DateTime, default=datetime.utcnow)  # When milestone was achieved
    daily_count_date = db.Column(db.Date, default=date.today)  # For daily cap enforcement
    
    # Unique constraint: each milestone can only fire once per user
    __table_args__ = (
        db.UniqueConstraint('user_id_hash', 'milestone_type', name='ux_user_milestone_type'),
    )
    
    def __repr__(self):
        return f'<UserMilestone {self.user_id_hash[:8]}...: {self.milestone_type}>'

class ReportFeedback(db.Model):
    """Report feedback tracking for Money Stories"""
    __tablename__ = 'report_feedback'
    
    id = db.Column(db.Integer, primary_key=True)
    user_id_hash = db.Column(db.String(255), nullable=False, index=True)  # SHA-256 hashed user ID
    report_context_id = db.Column(db.String(100), nullable=False)  # Unique report identifier
    signal = db.Column(db.String(10), nullable=False)  # 'up' or 'down'
    created_at = db.Column(db.DateTime, default=datetime.utcnow)  # Feedback timestamp
    
    # Idempotency constraint: only one feedback per user per report
    __table_args__ = (
        db.UniqueConstraint('user_id_hash', 'report_context_id', name='ux_user_report_feedback'),
        db.CheckConstraint("signal IN ('up', 'down')", name='ck_feedback_signal'),
    )
    
    def __repr__(self):
        return f'<ReportFeedback {self.user_id_hash[:8]}...: {self.signal}>'

class TelemetryEvent(db.Model):
    """Growth telemetry events tracking"""
    __tablename__ = 'telemetry_events'
    
    id = db.Column(db.Integer, primary_key=True)
    event_type = db.Column(db.String(50), nullable=False, index=True)  # expense_logged, expense_edited, etc.
    user_id_hash = db.Column(db.String(64), nullable=True, index=True)  # Hashed user identifier
    event_data = db.Column(JSON, default=dict)  # Event-specific data as JSON
    timestamp = db.Column(db.DateTime(timezone=True), nullable=False, default=datetime.utcnow, index=True)
    created_at = db.Column(db.DateTime(timezone=True), nullable=False, default=datetime.utcnow)
    
    def __repr__(self):
        return f'<TelemetryEvent {self.event_type} - {self.user_id_hash[:8] if self.user_id_hash else "anon"}>'

class GrowthCounter(db.Model):
    """Running totals for growth metrics"""
    __tablename__ = 'growth_counters'
    
    id = db.Column(db.Integer, primary_key=True)
    counter_name = db.Column(db.String(50), unique=True, nullable=False)  # total_expenses, total_reports, etc.
    counter_value = db.Column(db.BigInteger, default=0, nullable=False)  # Current counter value
    last_updated = db.Column(db.DateTime(timezone=True), nullable=False, default=datetime.utcnow)
    
    def __repr__(self):
        return f'<GrowthCounter {self.counter_name}: {self.counter_value}>'
